Fixes #141 - Remove grid style from EasyDropdown toggle, improve logic around wrapping children in a Button, add flex style for Button body string when Button.Addon is present (#144)

--- a/src/components/Button/style.css
+++ b/src/components/Button/style.css
@@ -19,6 +19,11 @@
   cursor: default;
 }
 
+.buttonBody {
+  flex: 1 1 auto;
+  min-width: 0;
+}
+
 /* Sizes */
 
 .sm {
@@ -280,8 +285,6 @@
   background-color: var(--rvr-btn-bg-color-text-disabled);
   border-color: var(--rvr-btn-border-color-text-disabled);
 }
-
-/* Hollow */
 
 .hollow,
 .hollow:link,
